--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -2,6 +2,19 @@
   "version": "0.2.0",
   "configurations": [
     {
+      "name": "Launch & Profile built-in server",
+      "type": "php",
+      "request": "launch",
+      "noDebug": true,
+      "profile": true,
+      "runtimeArgs": ["-S", "localhost:8000", "-t", "."],
+      "port": 9003,
+      "serverReadyAction": {
+        "action": "openExternally"
+      }
+    },
+
+    {
       "name": "Launch built-in server",
       "type": "php",
       "request": "launch",
@@ -24,20 +37,10 @@
     },
 
     {
-      "name": "Debug current script in console",
-      "type": "php",
-      "request": "launch",
-      "program": "${file}",
-      "cwd": "${fileDirname}",
-      "externalConsole": false,
-      "port": 9003
-    },
-
-    {
       "name": "Listen for Xdebug",
       "type": "php",
       "request": "launch",
-      "port": 9003
+      "port": 443
     }
   ]
 }
