I have added new features into my ebot such a displying users dashbord and user profile links

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,5 +1,3 @@
-// {
-//   "recommendations": [
-//     "akamud.vscode-theme-onedark"
-//   ]
-// }
+{
+  "recommendations": ["akamud.vscode-theme-onedark"]
+}
